deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-webapp
  template:
    metadata:
      labels:
        app: demo-webapp
    spec:
      imagePullSecrets:
      - name: dockerhub-secret

      containers:
      - name: demo-webapp
        image: manjunath9795/demo-webapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
