service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-webapp-service
spec:
  selector:
    app: demo-webapp
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
